XWayland fails with -fullscreen
$ Xwayland -version
The X.Org Foundation Xwayland Version 24.1.0 (12401000)
X Protocol Version 11, Revision 0
$ Xwayland :1 -fullscreen
XWAYLAND: wp_viewport@21: error 0: wl_viewport.set_destination sent with invalid values
(EE) could not connect to wayland server
Running with WAYLAND_DEBUG=1
, it looks like XWayland does indeed violate the protocol by setting an empty viewport:
[1132541.018] xdg_toplevel@18.configure(0, 0, array[0])
[1132541.029] xdg_surface@17.configure(109488)
[1132541.035] -> xdg_toplevel@18.set_fullscreen(nil)
[1132541.040] -> wp_viewport@21.set_source(0.00000000, 0.00000000, 640.00000000, 480.00000000)
[1132541.046] -> wp_viewport@21.set_destination(0, 0)
[1132541.050] -> wl_surface@16.commit()
[1132541.054] -> xdg_surface@17.ack_configure(109488)
[1132541.057] -> wl_surface@16.commit()
Compare this with 23.2.2:
[ 89775.921] xdg_toplevel@16.configure(0, 0, array[0])
[ 89775.936] xdg_surface@15.configure(272)
[ 89775.953] -> xdg_toplevel@16.set_fullscreen(wl_output@13)
[ 89775.974] -> wp_viewport@19.set_source(0.00000000, 0.00000000, 640.00000000, 480.00000000)
[ 89775.990] -> wp_viewport@19.set_destination(1280, 720)
[ 89776.005] -> wl_surface@3.commit()
[ 89776.018] -> xdg_surface@15.ack_configure(272)
[ 89776.030] -> wl_surface@3.commit()
Original report at https://github.com/labwc/labwc/issues/2014.